# tr

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake  README.md  check_compiler.cmake  defines.cmake  dependencies.cmake  generate_embeddable.cmake  git_hash.cmake  target_template.cmake
include/tr/: audio.hpp  imgui.hpp  sysgfx.hpp  tr.hpp  utility.hpp
include/tr/audio/: al_call.hpp  audio_buffer.hpp  audio_class.hpp  audio_context.hpp  audio_device.hpp  audio_device_list_view.hpp  audio_source.hpp  audio_stream.hpp  audio_system.hpp  buffer.hpp  impl.hpp  listener.hpp  source.hpp  stream.hpp  system.hpp
include/tr/audio/impl/: audio_context.hpp
include/tr/dependencies/: EnumBitmask.hpp  imgui_impl_sdl3.h
include/tr/sysgfx/: atlas.hpp  atlased_font.hpp  backbuffer.hpp  basic_renderer.hpp  bitmap.hpp  bitmap_iterators.hpp  blending.hpp  buffer.hpp  buffer_map.hpp  buffer_map_impl.hpp  circle_renderer.hpp  cursor.hpp  debug_renderer.hpp  dialog.hpp  display.hpp  event.hpp  event_impl.hpp  event_queue.hpp  event_types.hpp  gl.hpp  gl_call.hpp  gl_checks.hpp  gl_checks_impl.hpp  gl_defines.hpp  gl_functions.hpp  glad.h  gpu_benchmark.hpp  graphics_benchmark.hpp  graphics_buffer.hpp  graphics_buffer_map.hpp  graphics_context.hpp  impl.hpp  index_buffer.hpp  initialization.hpp  keyboard.hpp  keyboard_events.hpp  keyboard_impl.hpp  khrplatform.h  layered_drawing.hpp  layered_multidrawer.hpp  (+24 more)
include/tr/sysgfx/impl/: atlas.hpp  bitmap.hpp  buffer_map.hpp  debug_renderer.hpp  event.hpp  gl_checks.hpp  graphics_buffer_map.hpp  graphics_context.hpp  keyboard.hpp  layered_drawing.hpp  layered_multidrawer.hpp  shader_buffer.hpp  state_machine.hpp  ttfont.hpp  uniform_buffer.hpp  vertex_buffer.hpp  vertex_format.hpp  window.hpp
include/tr/utility/: alignment.hpp  angle.hpp  angle_impl.hpp  atlas_packer.hpp  benchmark.hpp  binary_io.hpp  binary_io_impl.hpp  chrono.hpp  circle.hpp  color.hpp  color_cast.hpp  color_cast_impl.hpp  color_impl.hpp  color_literals.hpp  common.hpp  concepts.hpp  cstring_view.hpp  default_binary_io.hpp  defer.hpp  draw_geometry.hpp  draw_geometry_impl.hpp  encryption.hpp  enum.hpp  exception.hpp  geometry.hpp  geometry_impl.hpp  get.hpp  handle.hpp  handle_impl.hpp  hash_map.hpp  hashmap.hpp  integer.hpp  iostream.hpp  iterator.hpp  line.hpp  localization_map.hpp  logger.hpp  macro.hpp  math.hpp  matrix.hpp  (+28 more)
include/tr/utility/impl/: alignment.hpp  angle.hpp  atlas_packer.hpp  binary_io.hpp  chrono.hpp  color.hpp  cstring_view.hpp  defer.hpp  draw_geometry.hpp  encryption.hpp  enum.hpp  exception.hpp  geometry.hpp  handle.hpp  hash_map.hpp  integer.hpp  iterator.hpp  logger.hpp  math.hpp  mirror_repeat.hpp  norm_cast.hpp  optional.hpp  print.hpp  ranges.hpp  rectangle.hpp  rectangle_edges.hpp  reference.hpp  rng.hpp  static_string.hpp  static_vector.hpp  template.hpp  timer.hpp  utf8.hpp  variant.hpp  vector.hpp  zstring_view.hpp
resources/: basic_renderer.frag  basic_renderer.vert  circle_renderer.frag  circle_renderer.vert  debug_renderer.frag  debug_renderer.vert
src/: imgui.cpp
src/audio/: al_call.cpp  audio_buffer.cpp  audio_context.cpp  audio_device.cpp  audio_device_list_view.cpp  audio_source.cpp  audio_stream.cpp  audio_system.cpp  buffer.cpp  impl.cpp  listener.cpp  source.cpp  stream.cpp  system.cpp
src/sysgfx/: atlas.cpp  atlased_font.cpp  backbuffer.cpp  basic_renderer.cpp  basic_renderer_drawer.cpp  basic_renderer_staggered_draw_manager.cpp  bitmap.cpp  bitmap_iterators.cpp  buffer.cpp  buffer_map.cpp  circle_renderer.cpp  circle_renderer_drawer.cpp  circle_renderer_staggered_draw_manager.cpp  cursor.cpp  debug_renderer.cpp  dialog.cpp  display.cpp  event.cpp  gl.cpp  gl_call.cpp  gl_functions.cpp  glad.cpp  gpu_benchmark.cpp  graphics_benchmark.cpp  graphics_buffer.cpp  graphics_buffer_map.cpp  graphics_context.cpp  impl.cpp  index_buffer.cpp  initialization.cpp  keyboard.cpp  main.cpp  mouse.cpp  path.cpp  render_target.cpp  render_texture.cpp  renderer_2d.cpp  renderer_2d_staggered_draw_manager.cpp  shader.cpp  shader_buffer.cpp  (+11 more)
src/sysgfx/resources/: debug_font.bmp.hpp
src/utility/: atlas_packer.cpp  benchmark.cpp  binary_io.cpp  chrono.cpp  circle.cpp  cstring_view.cpp  encryption.cpp  exception.cpp  geometry.cpp  iostream.cpp  line.cpp  localization_map.cpp  logger.cpp  matrix.cpp  mstream.cpp  polygon.cpp  rng.cpp  stopwatch.cpp  timer.cpp  triangle.cpp  vector.cpp
test/: CMakeLists.txt
test/audio/: CMakeLists.txt  audio_buffer.cpp  audio_context.cpp  audio_device.cpp  audio_device_list_view.cpp  audio_source.cpp
test/utility/: CMakeLists.txt  alignment.cpp  atlas_packer.cpp  benchmark.cpp  binary_io.cpp  circle.cpp  color.cpp  defer.cpp  encryption.cpp  enum.cpp  handle.cpp  hash_map.cpp  localization_map.cpp  logger.cpp  math.cpp  matrix.cpp  mstream.cpp  norm_cast.cpp  optional.cpp  print.cpp  ranges.cpp  rectangle.cpp  rectangle_edges.cpp  reference.cpp  rng.cpp  static_vector.cpp  stopwatch.cpp  template.cpp  timer.cpp  triangle.cpp  utf8.cpp  variant.cpp  zstring_view.cpp
tools/: cpp_embed_binary.c  cpp_embed_string.c
